Removed references to external files for testing

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<link rel="icon" href="logo.jpg" type="image/x-icon"/>
+<!--	<link rel="icon" href="logo.jpg" type="image/x-icon"/> -->
 	<title>Project 21</title>
-
+<!--
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -12,15 +12,16 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+-->
 </head>
 
 
 <body>
-	<div>
+<!--	<div>
 		<img src="logo.jpg" style="width:200px; height:200px"/>
 		<img src="test_photo.jpeg" style="margin-top:10px;margin-left:450px;width:600px;height:300px"/>
 	</div>
-
+-->
 	<br><br><br><br>
 
 	<footer class="page-footer light grey">
@@ -54,11 +55,11 @@
 		</div>
 	</footer>
 
-
+<!--
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/materialize.js"></script>
 	<script src="js/init.js"></script>
-
+-->
 </body>
 </html>
