Much more basic file for testing

--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-<!--	<link rel="icon" href="logo.jpg" type="image/x-icon"/> -->
-	<title>Project 21</title>
-<!--
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-	<!-- CSS  -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
--->
-</head>
-
-
-<body>
-<!--	<div>
-		<img src="logo.jpg" style="width:200px; height:200px"/>
-		<img src="test_photo.jpeg" style="margin-top:10px;margin-left:450px;width:600px;height:300px"/>
-	</div>
--->
-	<br><br><br><br>
-
-	<footer class="page-footer light grey">
-		<div class="container">
-			<div class="row">
-				<div class="col l6 s12">
-					<h5 class="white-text">Company Bio</h5>
-					<p class="grey-text text-lighten-4">We are a team of people dedicated to bringing fun activities and support to people of all disabilities.</p>
-
-					<button class="btn waves-effect waves-light pink lighten-1" href="#!">Team</button>
-					<button class="btn waves-effect waves-light pink lighten-1" href="#!">Activities</button>
-					<button class="btn waves-effect waves-light pink lighten-1" href="#!">Gallery</button>
-					<button class="btn waves-effect waves-light pink lighten-1" href="#!">About Us</button>
-				</div>
-
-				<div class="col l3 s12">
-					<h5 class="white-text">Find us on</h5>
-					<ul>
-						<li><a class="white-text" href="#!">Twitter</a></li>
-						<li><a class="white-text" href="#!">Facebook</a></li>
-						<li><a class="white-text" href="#!">Instagram</a></li>
-						<li><a class="white-text" href="#!">Snapchat</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				A Giles Munn creation
-			</div>
-		</div>
-	</footer>
-
-<!--
-	<!--  Scripts-->
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/materialize.js"></script>
-	<script src="js/init.js"></script>
--->
-</body>
-</html>
+Hello World
