Edited index for more realistic testing and placeholder text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<title>Project21</title>
+
+<center>
+	<h3> Project21 </h3>
+	<p> Welcome to Project21 UK! We are a charity dedicated to 
+	    helping individuals with Downs Syndrome across East Anglia.
+	    Based in Suffolk, we provide fun activities and days out
+	    including music sessions, trips to the theatre, and much
+	    more! 
+	</p>
+
+	<h5> Contact Us </h5>
+	<p> Email: info@project21uk.com </p>
+</center>
