Removed reference to old CSS, changed formatting

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <center>
 	<h3> Project21 </h3>
-	<p> Welcome to Project21 UK! We are a charity dedicated to 
+	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
 	    helping individuals with Downs Syndrome across East Anglia.
 	    Based in Suffolk, we provide fun activities and days out
 	    including music sessions, trips to the theatre, and much
 	    more! 
-	</p>
+	</div>
 
 	<h5> Contact Us </h5>
 	<p> Email: info@project21uk.com </p>
@@ -20,4 +20,3 @@
 <script src="js/init.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
