Added test photo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center>
 	<h3> Project21 </h3>
 	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
-	    helping individuals with Downs Syndrome across East Anglia.
+	    helping children and adults with Downs Syndrome across East Anglia.
 	    Based in Suffolk, we provide fun activities and days out
 	    including music sessions, trips to the theatre, and much
 	    more! 
@@ -14,6 +14,7 @@
 	<p> Email: info@project21uk.com </p>
 </center>
 
+<img src="test-photo.jpeg"/>
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
