Fixed wrong file name

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 	<h5> Contact Us </h5>
 	<p> Email: info@project21uk.com </p>
-</center>
 
-<img src="test-photo.jpeg"/>
+<img src="test_photo.jpeg"/>
+
+</center>
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
