Images looked silly, removed

--- a/index.html
+++ b/index.html
@@ -3,22 +3,14 @@
 
 <center>
 	<h3> Project21 </h3>
-	<div>
-		<div class="float:left">
-			<img src="logo.jpg"/>
-		</div>
-		<div style="float:right; width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
-	    				helping children and adults with Downs Syndrome across East Anglia.
-	    				Based in Suffolk, we provide fun activities and days out
-	    				including music sessions, trips to the theatre, and much more! </div>
+	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
+	 helping children and adults with Downs Syndrome across East Anglia.
+	 Based in Suffolk, we provide fun activities and days out
+	 including music sessions, trips to the theatre, and much more! </div>
 	</div>
 
 	<h5> Contact Us </h5>
 	<p> Email: info@project21uk.com </p>
-
-<div style="width:60%">
-	<img src="test_photo.jpeg"/>
-</div>
 
 </center>
 
