--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h5> Contact Us </h5>
 	<p> Email: info@project21uk.com </p>
 
+	<button id="about_page_button" type="submit" class="waves-effect waves-light btn red lighten-1">About</button>
+
 </center>
 
 <!--Scripts-->
