--- a/index.html
+++ b/index.html
@@ -16,6 +16,38 @@
 
 </center>
 
+<!-- Footer -->
+<div id="footer">
+    <footer class="footer">
+
+        <div class="row full-width">
+            <div class="small-12 medium-4 large-4 columns">
+
+                <a class="twitter-timeline" data-height="200" href="https://twitter.com/Artbud_Official">Tweets by
+                    Artbud_Official</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+            </div>
+
+            <div class="small-12 medium-4 large-4 columns">
+
+                <h4>About Us</h4>
+
+                <p>We love art and we want to share this love with the whole World. </p>
+
+            </div>
+
+            <div class="small-12 medium-4 large-4 columns">
+
+                <h4>Contact us</h4>
+                <p>Email: artbud@artbud.co.uk<br>
+                    Phone: 01232 613123 </p>
+            </div>
+        </div>
+    </footer>
+</div>
+
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
