--- a/index.html
+++ b/index.html
@@ -17,36 +17,31 @@
 </center>
 
 <!-- Footer -->
-<div id="footer">
-    <footer class="footer">
-
-        <div class="row full-width">
-            <div class="small-12 medium-4 large-4 columns">
-
-                <a class="twitter-timeline" data-height="200" href="https://twitter.com/Artbud_Official">Tweets by
-                    Artbud_Official</a>
-                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
+<footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
             </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-
-                <h4>About Us</h4>
-
-                <p>We love art and we want to share this love with the whole World. </p>
-
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
-
-            <div class="small-12 medium-4 large-4 columns">
-
-                <h4>Contact us</h4>
-                <p>Email: artbud@artbud.co.uk<br>
-                    Phone: 01232 613123 </p>
-            </div>
-        </div>
-    </footer>
-</div>
+          </div>
+        </footer>
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
