--- a/index.html
+++ b/index.html
@@ -49,3 +49,5 @@
 <script src="js/init.js"></script>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="css/footer.css" type="text/css" rel="stylesheet"/>
+
