Changed footer text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<h3> Project21 </h3>
 	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities and days out
-	 including music sessions, trips to the theatre, and much more! </div>
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more! </div>
 	</div>
 
 	<h5> Contact Us </h5>
@@ -21,24 +20,21 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <h5 class="white-text">About Us</h5>
+                <p class="grey-text text-lighten-4">Project21 is a a charity dedicated to helping children and adults with Downs Syndrome across East Anglia.</p>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+                <h5 class="white-text">Social Media</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/project21uk/">Facebook</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/project21uk/">Instagram</a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2018 Giles Munn
             </div>
           </div>
         </footer>
