Moved text to the left rather than centre

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>Project21</title>
 <link rel="icon" href="logo.jpg" type="image/x-icon"/>
 
-<center>
+<div style="float:left">
 	<h3> Project21 </h3>
 	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
@@ -11,9 +11,9 @@
 	<h5> Contact Us </h5>
 	<p> Email: info@project21uk.com </p>
 
-	<button id="about_page_button" type="submit" class="waves-effect waves-light btn red lighten-1">About</button>
+	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">About</button>
 
-</center>
+</div>
 
 <br><br><br><br><br><br><br>
 
