Removed wrong width item from nested div tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <div style="float:left; width:55%; margin-left:10px">
 	<h3> Project21 </h3>
-	<div style="width:60%"> Welcome to Project21 UK! We are a charity dedicated to 
+	<div> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
 	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more! </div>
 	</div>
