--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <div style="float:left; width:55%; margin-left:10px">
 	<h3> Project21 </h3>
-	<div> Welcome to Project21 UK! We are a charity dedicated to 
+	<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
 	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more! </div>
-	</div>
+	</p>
+	<br>
+	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 
-	<h5> Contact Us </h5>
-	<p> Email: info@project21uk.com </p>
+</div>
 
-	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">About</button>
-
+<div style="float:right; width:45%">
+	<img src="test-photo.jpeg"/>
 </div>
 
 <br><br><br><br><br><br><br>
