--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <div style="float:left; width:55%; margin-left:10px">
 	<h3> Project21 </h3>
-	<p> Welcome to Project21 UK! We are a charity dedicated to 
+	<div> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more! </div>
-	</p>
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!
 	<br>
 	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
+	</div>
 
 </div>
 
 <div style="float:right; width:45%">
-	<img src="test-photo.jpeg"/>
+	<img src="test_photo.jpeg"/>
 </div>
 
 <br><br><br><br><br><br><br>
