Specified photo dimensions

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>Project21</title>
 <link rel="icon" href="logo.jpg" type="image/x-icon"/>
 
-<div style="float:left; width:55%; margin-left:10px">
+<div style="float:left; width:40%; margin-left:10px">
 	<h3> Project21 </h3>
 	<div> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
@@ -12,8 +12,8 @@
 
 </div>
 
-<div style="float:right; width:45%">
-	<img src="test_photo.jpeg"/>
+<div style="float:right; width:60%">
+	<img height="100" width="100" src="test_photo.jpeg"/>
 </div>
 
 <br><br><br><br><br><br><br>
