Changed photo dimensions

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 	<h3> Project21 </h3>
 	<div> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!
-	<br>
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</div>
 	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
-	</div>
-
 </div>
 
 <div style="float:right; width:60%">
-	<img height="100" width="100" src="test_photo.jpeg"/>
+	<img height="200" width="300" src="test_photo.jpeg"/>
 </div>
 
 <br><br><br><br><br><br><br>
