Testing footer comment

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 </div>
 
-<div style="float:right; width:60%">
+<!--<div style="float:right; width:60%">
 	<img height="228" width="405" src="test_photo.jpeg"/>
-</div>
+</div>-->
 
 <br><br><br><br><br><br><br>
 
