--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <div style="float:left; width:40%; margin-left:15px">
 	<h3> Project21 </h3>
-	<div> Welcome to Project21 UK! We are a charity dedicated to 
+	<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</div>
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!<p>
 	<br><br>
 	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 </div>
