Checking if button is the problem

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
 	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!<p>
-	<br><br>
-	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
+	<br>
+<!--	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>-->
 </div>
 
-<!--<div style="float:right; width:60%">
+<div style="float:right; width:60%">
 	<img height="228" width="405" src="test_photo.jpeg"/>
-</div>-->
+</div>
 
 <br><br><br><br><br><br><br>
 
