--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<h3> Project21 </h3>
 	<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!<p>
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
 	<br>
 <!--	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>-->
 </div>
