--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </div>
 
 <div style="float:right; width:60%">
-	<img height="228" width="405" src="test_photo.jpeg"/>
+	<center>
+		<img height="228" width="405" src="test_photo.jpeg"/>
+	</center>
 </div>
 
 <br><br><br><br><br><br><br>
