Removed test comment

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <link rel="icon" href="logo.jpg" type="image/x-icon"/>
 
 <div style="float:left; width:40%; margin-left:15px">
-<!--	<h3> Project21 </h3>
+	<h3> Project21 </h3>
 	<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p> -->
+	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
 	<br>
-<!--	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>-->
+	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 </div>
 
 <div style="float:right; width:60%">
