--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <title>Project21</title>
 <link rel="icon" href="logo.jpg" type="image/x-icon"/>
 
+<body>
 <div style="float:left; width:40%; margin-left:15px">
 	<h3> Project21 </h3>
 	<p> Welcome to Project21 UK! We are a charity dedicated to 
@@ -17,6 +18,7 @@
 </div>
 
 <br><br><br><br><br><br><br>
+</body>
 
 <!-- Footer -->
 <footer class="page-footer">
