--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-<title>Project21</title>
-<link rel="icon" href="logo.jpg" type="image/x-icon"/>
+<head>
+	<title>Project21</title>
+	<link rel="icon" href="logo.jpg" type="image/x-icon"/>
+</head>
 
 <body>
-<div style="float:left; width:40%; margin-left:15px">
-	<h3> Project21 </h3>
-	<p> Welcome to Project21 UK! We are a charity dedicated to 
-	 helping children and adults with Downs Syndrome across East Anglia.
-	 Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
-	<br>
-	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
-</div>
+	<div style="float:left; width:40%; margin-left:15px">
+		<h3> Project21 </h3>
+		<p> Welcome to Project21 UK! We are a charity dedicated to 
+	 	helping children and adults with Downs Syndrome across East Anglia.
+	 	Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
+		<br>
+		<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
+	</div>
 
-<div style="float:right; width:60%">
-	<center>
-		<img height="228" width="405" src="test_photo.jpeg"/>
-	</center>
-</div>
+	<div style="float:right; width:60%">
+		<center>
+			<img height="228" width="405" src="test_photo.jpeg"/>
+		</center>
+	</div>
 
-<br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br>
 </body>
 
 <!-- Footer -->
@@ -41,8 +43,8 @@
             <div class="container">
             © 2018 Giles Munn
             </div>
-          </div>
-        </footer>
+          </div> 
+</footer>
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
