Temporarily remove footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br><br><br><br><br><br><br>
 </body>
 
-<!-- Footer -->
+<!-- Footer
 <footer class="page-footer">
           <div class="container">
             <div class="row">
@@ -44,7 +44,7 @@
             © 2018 Giles Munn
             </div>
           </div> 
-</footer>
+</footer>-->
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
