--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-	<div style="float:left; width:40%; margin-left:15px">
+	<div style="float:left; margin-left:15px">
 		<h3> Project21 </h3>
 		<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 	helping children and adults with Downs Syndrome across East Anglia.
@@ -13,7 +13,7 @@
 		<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 	</div>
 
-	<div style="float:right; width:60%">
+	<div style="float:right">
 		<center>
 			<img height="228" width="405" src="test_photo.jpeg"/>
 		</center>
