Removed left float

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-	<div style="float:left; margin-left:15px">
+	<div style="width:40%; margin-left:15px">
 		<h3> Project21 </h3>
 		<p> Welcome to Project21 UK! We are a charity dedicated to 
 	 	helping children and adults with Downs Syndrome across East Anglia.
