--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
 	</div>
 
-	<div style="float:right">
+	<div>
 		<center>
-			<img height="228" width="405" src="test_photo.jpeg"/>
+			<img style="float:right" height="228" width="405" src="test_photo.jpeg"/>
 		</center>
 	</div>
 
