Trying different formatting

--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
 </head>
 
 <body>
-	<div style="width:40%; margin-left:15px">
-		<h3> Project21 </h3>
-		<p> Welcome to Project21 UK! We are a charity dedicated to 
-	 	helping children and adults with Downs Syndrome across East Anglia.
-	 	Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
-		<br>
-		<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
-	</div>
-
-	<div>
-		<center>
-			<img style="float:right" height="228" width="405" src="test_photo.jpeg"/>
-		</center>
-	</div>
+	<h3> Project21 </h3>
+	<p style="width:40%; margin-left:15px">
+	Welcome to Project21 UK! We are a charity dedicated to 
+	helping children and adults with Downs Syndrome across East Anglia.
+	Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!
+	<br>
+	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
+	<img style="float:right" height="228" width="405" src="test_photo.jpeg"/>
+	</p>
 
 	<br><br><br><br><br><br><br>
 </body>
