Changed to a column system

--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
 </head>
 
 <body>
-	<h3> Project21 </h3>
-	<p style="width:40%; margin-left:15px">
-	Welcome to Project21 UK! We are a charity dedicated to 
-	helping children and adults with Downs Syndrome across East Anglia.
-	Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!
-	<br>
-	<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
-	<img style="float:right" height="228" width="405" src="test_photo.jpeg"/>
-	</p>
+	<div class='container'>
+		<div class='row'>
+			<div style="margin-left:15px" class='col s8'>
+				<h3>Project21</h3>
+				<p>Welcome to Project21 UK! We are a charity dedicated to
+			           helping children and adults with Downs Syndrome across East Anglia.
+        			   Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
+				<br>
+				<button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
+			</div>
+			
+			<div class='col s4'>
+				<img height="228" width="405" src="test_photo.jpeg"/>
+			</div>
+		</div>
+	</div>
 
 	<br><br><br><br><br><br><br>
 </body>
 
-<!-- Footer
+<!-- Footer -->
 <footer class="page-footer">
           <div class="container">
             <div class="row">
@@ -39,7 +46,7 @@
             © 2018 Giles Munn
             </div>
           </div> 
-</footer>-->
+</footer>
 
 <!--Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
