--- a/index.html
+++ b/index.html
@@ -16,24 +16,30 @@
 </head>
 
 <body>
-	<div class='container'>
-		<div class='row'>
-			<div class='col s6'>
-				<h3>Project21</h3>
-				<p>Welcome to Project21 UK! We are a charity dedicated to
-          helping children and adults with Downs Syndrome across East Anglia.
-        Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
-        <br>
-        <form action="contact.html">
-          <button id="about_page_button" type="submit" class="waves-effect waves-light btn blue lighten-1">Contact Us</button>
-        </form>
-      </div>
+  <nav>
+    <div class="nav-wrapper">
+      <!--<a href="#" class="brand-logo right">Logo</a>-->
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+  </nav>
 
-      <div style="margin-top:10%" class='col s6'>
-        <img height="228" width="405" src="test_photo.jpeg"/>
-      </div>
+  <div class='container'>
+    <div class='row'>
+     <div class='col s6'>
+      <h3>Project21</h3>
+      <p>Welcome to Project21 UK! We are a charity dedicated to
+        helping children and adults with Downs Syndrome across East Anglia.
+      Based in Suffolk, we provide fun activities, days out, music sessions, trips to the theatre, and much more!</p>
+      <br>
+    </div>
+    <div style="margin-top:10%" class='col s6'>
+      <img height="228" width="405" src="test_photo.jpeg"/>
     </div>
   </div>
+</div>
 </body>
 
 <!-- Footer -->
