Added charity number to footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <!--<a href="#" class="brand-logo right">Logo</a>-->
+      <a href="#" style="margin-left:2%" class="brand-logo left">Project21</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact Us</a></li>
@@ -61,8 +61,11 @@
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container">
-        © 2018 Giles Munn
+      <div class="container" style="margin-left:5%">
+        © 2018 Project21UK
+      </div>
+      <div class="container" style="margin-left:40%">
+        Registered Charity Number: 1179898
       </div>
     </div> 
   </footer>
