--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <!--<a href="#" class="brand-logo right">Logo</a>-->
+      <a href="#" style="margin-left:2%" class="brand-logo left">Project21</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact Us</a></li>
@@ -85,7 +85,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          © 2018 Giles Munn
+          © 2018 Project21UK
         </div>
       </div> 
     </footer>
