--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class='container'>
     <div class='row'>
-     <div class='col s6'>
+     <div style="margin-top:10%" class='col s6'>
       <h3>Project21</h3>
       <p>Welcome to Project21 UK! We are a charity dedicated to
         helping children and adults with Downs Syndrome across East Anglia.
