--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Project21 - About Us</title>
+  <title>Project21 - Contact Us</title>
   <link rel="icon" href="logo.jpg" type="image/x-icon"/>
 
   <style>
@@ -30,7 +30,7 @@
     <h4>Contact Us</h3>
     </center>
     <div style="margin-top:5%; width:80%" class="row">
-      <form action="mailto:giles@munn.co.uk" method="post" enctype="text/plain" class="col s12">
+      <form action="mailto:info@project21uk.com" method="post" enctype="text/plain" class="col s12">
         <div class="row">
           <div class="input-field col s6">
             <input id="first_name" type="text" class="validate">
@@ -84,8 +84,11 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container">
+        <div class="container" style="margin-left:5%">
           © 2018 Project21UK
+        </div>
+        <div class="container" style="margin-left:40%">
+          Registered Charity Number: 1179898
         </div>
       </div> 
     </footer>
